--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.1.6
   http: ^0.13.5
+  google_fonts: ^4.0.3
+  json_theme: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+  - lib\assets\appainter_theme.json
+  fonts:
+  - family: WorkSans
+    fonts:
+       - asset: lib\assets\WorkSans-VariableFont_wght.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
